--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>SW</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+	<img src="/images/logo.png">
 	<h1>What does Trump think</h1>
-	<button>Trump Quote</button>
 
 	<script src="jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="script.js" type="text/javascript" charset="utf-8"></script>
